# hrc-robot

./: CMakeLists.txt
body-tracking-samples/: CMakeLists.txt
body-tracking-samples/simple_cpp_sample/: CMakeLists.txt  MultiDeviceCapturer.h  README.md  k4a.h  k4a.hpp  k4atypes.h  main.cpp  server.c  server.cpp
