# Copyright (c) Microsoft Corporation. All rights reserved.
# Licensed under the MIT License.

add_subdirectory(simple_cpp_sample)

#add_subdirectory(util/extern)
#add_subdirectory(util/camera_space_transform_sample)
#add_subdirectory(util/offline_processor)
#add_subdirectory(util/sample_helper_libs)
#add_subdirectory(simple_3d_viewer)
#add_subdirectory(simple_sample)

